WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
263889
[Cocoa] YouTube videos sometimes do not resize properly in fullscreen
https://bugs.webkit.org/show_bug.cgi?id=263889
Summary
[Cocoa] YouTube videos sometimes do not resize properly in fullscreen
Andy Estes
Reported
2023-10-30 08:07:25 PDT
[Cocoa] YouTube videos sometimes do not resize properly in fullscreen
Attachments
Add attachment
proposed patch, testcase, etc.
Andy Estes
Comment 1
2023-10-30 08:07:33 PDT
<
rdar://problem/114570133
>
Andy Estes
Comment 2
2023-10-30 08:48:31 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/19721
EWS
Comment 3
2023-11-01 09:36:34 PDT
Committed
270061@main
(3a73162c6129): <
https://commits.webkit.org/270061@main
> Reviewed commits have been landed. Closing PR #19721 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug