Source/WebKit/UIProcess/Cocoa/VideoPresentationManagerProxy.mm
@@ -222,7 +222,7 @@ void VideoPresentationModelContext::setVideoDimensions(const WebCore::FloatSize&
         return;
 
     m_videoDimensions = videoDimensions;
-    ALWAYS_LOG_IF_POSSIBLE(LOGIDENTIFIER, videoDimensions);
+    ALWAYS_LOG_IF_POSSIBLE(LOGIDENTIFIER, videoDimensions, ", clients=", m_clients.computeSize());
     m_clients.forEach([&](auto& client) {
         client.videoDimensionsChanged(videoDimensions);
     });
@@ -695,6 +695,9 @@ PlatformLayerContainer VideoPresentationManagerProxy::createLayerWithID(Playback
         [playerLayer layoutIfNeeded];
     }
 
+    if (m_page)
+        m_page->send(Messages::VideoPresentationManager::EnsureUpdatedVideoDimensions(contextId, nativeSize));
+
     return model->playerLayer();
 }
 
@@ -768,6 +771,9 @@ RetainPtr<WKVideoView> VideoPresentationManagerProxy::createViewWithID(PlaybackS
         model->setPlayerView(playerView.get());
         model->setVideoView(videoView.get());
     }
+
+    if (m_page)
+        m_page->send(Messages::VideoPresentationManager::EnsureUpdatedVideoDimensions(contextId, nativeSize));
 
     return model->videoView();
 }
